fix alignment on safari

--- a/style.css
+++ b/style.css
@@ -475,6 +475,9 @@ hr {
 
     .right-align {
         justify-content: end;
+        -webkit-justify-content: flex-end;
+        align-items: flex-end;
+        -webkit-align-items: flex-end;
     }
 
     .third {
